# Agent-Coder

./: Cargo.toml  LICENSE  README.md
prompts/: new_system.txt  system.txt
src/: main.rs
src/agent/: core.rs  executor.rs  messages.rs  mod.rs  structs.rs
src/console/: logger.rs  mod.rs  reader.rs
src/history/: errors.rs  fs.rs  mod.rs  operations.rs  structs.rs
src/llm/: assistant_schema.rs  builder.rs  chat.rs  errors.rs  mod.rs  parser.rs  structs.rs  tools_schema.rs
src/tools/: auxiliary.rs  errors.rs  fs.rs  git.rs  grep.rs  mod.rs
