[package]
name = "agent_coder"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
async-openai = { version = "0.41.0", features = ["_api", "chat-completion-types", "chat-completion", "assistant-types"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
dotenv = "0.15"
clap = { version = "4", features = ["derive"] }
dirs = "5"
grep-regex = "0.1.14"
grep-searcher = "0.1.16"
grep-matcher = "0.1.8"
walkdir = "2.5.0"
chrono = { version = "0.4.45", features = ["serde"]}

[dev-dependencies]
tempfile = "3"